--- a/module-demo/module-common/build.gradle
+++ b/module-demo/module-common/build.gradle
@@ -39,8 +39,8 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.springframework.boot:spring-boot-starter-jdbc')
 
-//    compile('com.h2database:h2') //
-    runtime('com.h2database:h2') // 주저장소가 아니라 테스트용이라, 불필요하게 컴파일 의존성에 포함될 필요가 없다.
+    compile('com.h2database:h2') //
+//    runtime('com.h2database:h2') // 주저장소가 아니라 테스트용이라, 불필요하게 컴파일 의존성에 포함될 필요가 없다.
     runtimeOnly ('mysql:mysql-connector-java')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
