--- a/spring-boot-jpa/build.gradle
+++ b/spring-boot-jpa/build.gradle
@@ -6,7 +6,8 @@ plugins {
 
 group = 'com.starlord.demo'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
+sourceCompatibility = '11'
+targetCompatibility = '11'
 
 configurations {
     compileOnly {
@@ -21,22 +22,16 @@ repositories {
 dependencies {
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
-
-//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-//    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+//    compile('com.h2database:h2') //
 //    compileOnly 'org.projectlombok:lombok'
-
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
-    runtimeOnly 'com.h2database:h2'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
 
-    compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    compile('org.springframework.boot:spring-boot-starter-jdbc')
-
-//    compile('com.h2database:h2') //
-    runtime('com.h2database:h2') // 주저장소가 아니라 테스트용이라, 불필요하게 컴파일 의존성에 포함될 필요가 없다.
-    runtimeOnly ('mysql:mysql-connector-java')
+    implementation 'com.h2database:h2' // 주저장소가 아니라 테스트용이라, 불필요하게 컴파일 의존성에 포함될 필요가 없다.
+    implementation 'mysql:mysql-connector-java'
 //    testCompile('org.springframework.boot:spring-boot-starter-test')
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
